removing unused index and adding bg dark to base

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -8,7 +8,7 @@
     {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %}
     <link rel="stylesheet" href="{% static 'test.css' %}" />
   </head>
-  <body>
+  <body class="bg-dark">
     {% block content %} {% endblock %}
   </body>
 </html>
