showing crypto fields

--- a/frontend/templates/dashboard.html
+++ b/frontend/templates/dashboard.html
@@ -74,6 +74,14 @@
             </table>
         </div>
     </div>
+    <h1>{{ btc_balance.address }}</h1>
+    <h1>{{ btc_balance.brl_balance }}</h1>
+    <h1>{{ btc_balance.balance }}</h1>
+
+    <h1>{{ eth_balance.address }}</h1>
+    <h1>{{ eth_balance.brl_balance }}</h1>
+    <h1>{{ eth_balance.balance }}</h1>
+
 
 </div>
 {% endblock %}
