display chart on dashboard

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="{% static 'test.css' %}" />
     <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
     <script src="https://cdn.amcharts.com/lib/5/xy.js"></script>
+    <script src="https://cdn.amcharts.com/lib/5/percent.js"></script>
     <script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
     <script src="https://cdn.amcharts.com/lib/5/locales/de_DE.js"></script>
     <script src="https://cdn.amcharts.com/lib/5/geodata/germanyLow.js"></script>
     <script src="https://cdn.amcharts.com/lib/5/fonts/notosans-sc.js"></script>
-    <script src="{% static 'js/amcharts.js' %}"></script>
   </head>
   <body class="bg-dark">
     {% block content %} {% endblock %}
